# genus

./: README.md  genus.cabal
.github/workflows/: ci.yaml  update-flake-lock.yaml
nix/modules/flake-parts/: devshell.nix  haskell.nix  template.nix
src/: Main.hs
