cabal-version:      2.4
name:               genus
version:            0.1.0.0
license:            MIT
copyright:          2025 Ananth Venkatesh
maintainer:         dev.quantum9innovation@gmail.com
author:             Ananth Venkatesh
category:           Math
homepage:           https://github.com/quantum9innovation/genus

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:
  An implementation of a novel genetic algorithm for performing k-means over an arbitrary metric space

-- A longer description of the package.
description:
  Genus is a novel algorithm for efficiently clustering large datasets using the central ideas of k-means.
  Unlike k-means, it can be applied in arbitrary metric spaces, where centroids cannot be exactly defined.
  Instead, Genus attempts to find medoids by randomly sampling points in arbitrary clusters.
  As a genetic algorithm, it is able to generate clusters that optimize a custom objective function;
  we define a cost function measuring difference from uniform split and distance between clusters to score candidates,
  where a certain parameter can be used to adjust the weight of either of these measures in the cost.
  Through the process of natural selection and mutation, Genus can efficiently search through promising clusterings
  and determine one that scores quite highly.

-- A URL where users can report bugs.
bug-reports:        https://github.com/quantum9innovation/genus/issues/new
extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base          >=4   && <5
    , data-default
    , directory
    , filepath
    , mtl
    , optics-core
    , profunctors
    , relude        >=1.0
    , shower
    , time
    , with-utf8

  hs-source-dirs:     src
  default-language:   GHC2021

executable genus
  import:  shared
  main-is: Main.hs
